# cambrian

./: finetune_baseline_qwen05b_CLIP_mlp.sh  finetune_baseline_qwen07b_CLIP_mlp.sh  finetune_baseline_qwen7b_CLIP_mlp.sh  finetune_baseline_vicuna13b_CLIP_mlp.sh  finetune_baseline_vicuna7b_CLIP_mlp.sh  finetune_cambrian_7b_2tower_connectoronly_short.sh  finetune_cambrian_7b_CLIP_cabstractor_short.sh  finetune_cambrian_7b_CLIP_ldpnet_short.sh  finetune_cambrian_7b_CLIP_mlp_compressv_short.sh  finetune_cambrian_7b_CLIP_mlp_short.sh  finetune_cambrian_7b_CLIP_mlp_short_resume.sh  finetune_cambrian_7b_CLIP_mlp_short_stage3.sh  finetune_cambrian_7b_CLIP_sva_short.sh  finetune_cambrian_8b_CLIP_mlp.sh  finetune_cambrian_8b_connectoronly_short.sh  finetune_cambrian_llama31_8b_connectoronly.sh  finetune_cambrian_llama31_8b_connectoronly_resume.sh  finetune_cambrian_llama31_8b_connectoronly_short.sh  finetune_cambrian_llama31_8b_short.sh  finetune_cambrian_qwen05b_CLIP_mlp.sh  finetune_cambrian_qwen05b_CLIP_mlp_compressv.sh  finetune_cambrian_qwen7b_CLIP_mlp.sh  finetune_compressv_qwen05b_CLIP_mlp.sh  finetune_compressv_sepkv_mlp_qwen05b_CLIP_mlp.sh  finetune_compressv_sepkv_qwen05b_CLIP_mlp.sh  finetune_compressv_sepkv_vicuna7b_CLIP_mlp.sh  finetune_compressv_vicuna7b_CLIP_mlp.sh  fsdp_config.json  pretrain_baseline_qwen05b_CLIP_mlp_short.sh  pretrain_baseline_qwen7b_CLIP_mlp_short.sh  pretrain_baseline_vicuna13b_CLIP_mlp_short.sh  pretrain_baseline_vicuna7b_CLIP_mlp_short.sh  pretrain_baseline_visionmask_vicuna7b_CLIP_mlp_short.sh  pretrain_cambrian_7b.sh  (+34 more)
cambrian/: utils.py  (+1 more)
(+18 files in other folders)
